src/main/java/org/bdgenomics/wdl/parsing/WDLParser.java
// Generated from WDLParser.g4 by ANTLR 4.5.2
package org.bdgenomics.wdl.parsing;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class WDLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NEWLINE=1, WS=2, TASK=3, WORKFLOW=4, AS=5, IMPORT=6, RUNTIME=7, OUTPUT=8, 
		CALL=9, SEP=10, IF=11, LOOP=12, SCATTER=13, DEFAULT=14, QUOTE=15, INPUT=16, 
		COMMAND_BRACKET_BLOCK=17, COMMAND_BRACE_BLOCK=18, STRING_TYPE=19, FILE_TYPE=20, 
		INT_TYPE=21, FLOAT_TYPE=22, BOOL_TYPE=23, OBJECT_TYPE=24, MAP_TYPE=25, 
		ARRAY_TYPE=26, TRUE=27, FALSE=28, IDENTIFIER=29, STRING=30, INTEGER=31, 
		OCTAL=32, HEX=33, DECIMAL=34, FLOAT=35, LEFT_BLOCK=36, RIGHT_BLOCK=37, 
		VAR_START=38, COMMA=39, DOT=40, COLON=41, LEFT_BRACKET=42, RIGHT_BRACKET=43, 
		LEFT_BRACE=44, RIGHT_BRACE=45, LEFT_PAREN=46, RIGHT_PAREN=47, PLUS=48, 
		MINUS=49, QUESTION=50, BANG=51, ASTERISK=52, FSLASH=53, PERCENT=54, GTEQ=55, 
		LTEQ=56, GT=57, LT=58, EQEQ=59, EQUALS=60, BANGEQ=61, DOUBLEAMP=62, DOUBLEBAR=63, 
		BRACKET_BLOCK_CLOSE=64, BRACKET_ANYTHING=65, RIGHT_ARROW=66, BRACE_BLOCK_CLOSE=67, 
		BRACE_ANYTHING=68;
	public static final int
		RULE_document = 0, RULE_wdlimport = 1, RULE_import_location = 2, RULE_import_name = 3, 
		RULE_task = 4, RULE_task_name = 5, RULE_declaration = 6, RULE_task_section = 7, 
		RULE_command = 8, RULE_var_option = 9, RULE_var_option_key = 10, RULE_var_option_value = 11, 
		RULE_task_output = 12, RULE_output_assignment = 13, RULE_output_name = 14, 
		RULE_runtime = 15, RULE_runtime_assignment = 16, RULE_runtime_key = 17, 
		RULE_parameter_meta = 18, RULE_meta = 19, RULE_workflow = 20, RULE_workflow_name = 21, 
		RULE_workflow_element = 22, RULE_call = 23, RULE_call_inputs = 24, RULE_variable_mappings = 25, 
		RULE_variable_mapping_kv = 26, RULE_variable_mapping_key = 27, RULE_loop = 28, 
		RULE_conditional = 29, RULE_scatter = 30, RULE_type = 31, RULE_type_postfix_quantifier = 32, 
		RULE_primitive_type = 33, RULE_array_type = 34, RULE_array_component_type = 35, 
		RULE_object_type = 36, RULE_map_type = 37, RULE_map_key_type = 38, RULE_map_value_type = 39, 
		RULE_bool = 40, RULE_expression = 41;
	public static final String[] ruleNames = {
		"document", "wdlimport", "import_location", "import_name", "task", "task_name", 
		"declaration", "task_section", "command", "var_option", "var_option_key", 
		"var_option_value", "task_output", "output_assignment", "output_name", 
		"runtime", "runtime_assignment", "runtime_key", "parameter_meta", "meta", 
		"workflow", "workflow_name", "workflow_element", "call", "call_inputs", 
		"variable_mappings", "variable_mapping_kv", "variable_mapping_key", "loop", 
		"conditional", "scatter", "type", "type_postfix_quantifier", "primitive_type", 
		"array_type", "array_component_type", "object_type", "map_type", "map_key_type", 
		"map_value_type", "bool", "expression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'task'", "'workflow'", "'as'", "'import'", "'runtime'", 
		"'output'", "'call'", "'sep'", "'if'", "'loop'", "'scatter'", "'default'", 
		"'quote'", "'input'", null, null, "'String'", "'File'", "'Int'", "'Float'", 
		"'Bool'", "'Object'", "'Map'", "'Array'", "'true'", "'false'", null, null, 
		null, null, null, null, null, "'<<<'", null, "'${'", "','", "'.'", "':'", 
		"'['", "']'", "'{'", null, "'('", "')'", "'+'", "'-'", "'?'", "'!'", "'*'", 
		"'/'", "'%'", "'>='", "'<='", null, "'<'", "'=='", "'='", "'!='", "'&&'", 
		"'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NEWLINE", "WS", "TASK", "WORKFLOW", "AS", "IMPORT", "RUNTIME", 
		"OUTPUT", "CALL", "SEP", "IF", "LOOP", "SCATTER", "DEFAULT", "QUOTE", 
		"INPUT", "COMMAND_BRACKET_BLOCK", "COMMAND_BRACE_BLOCK", "STRING_TYPE", 
		"FILE_TYPE", "INT_TYPE", "FLOAT_TYPE", "BOOL_TYPE", "OBJECT_TYPE", "MAP_TYPE", 
		"ARRAY_TYPE", "TRUE", "FALSE", "IDENTIFIER", "STRING", "INTEGER", "OCTAL", 
		"HEX", "DECIMAL", "FLOAT", "LEFT_BLOCK", "RIGHT_BLOCK", "VAR_START", "COMMA", 
		"DOT", "COLON", "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_BRACE", "RIGHT_BRACE", 
		"LEFT_PAREN", "RIGHT_PAREN", "PLUS", "MINUS", "QUESTION", "BANG", "ASTERISK", 
		"FSLASH", "PERCENT", "GTEQ", "LTEQ", "GT", "LT", "EQEQ", "EQUALS", "BANGEQ", 
		"DOUBLEAMP", "DOUBLEBAR", "BRACKET_BLOCK_CLOSE", "BRACKET_ANYTHING", "RIGHT_ARROW", 
		"BRACE_BLOCK_CLOSE", "BRACE_ANYTHING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WDLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WDLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DocumentContext extends ParserRuleContext {
		public WorkflowContext workflow() {
			return getRuleContext(WorkflowContext.class,0);
		}
		public List<WdlimportContext> wdlimport() {
			return getRuleContexts(WdlimportContext.class);
		}
		public WdlimportContext wdlimport(int i) {
			return getRuleContext(WdlimportContext.class,i);
		}
		public List<TaskContext> task() {
			return getRuleContexts(TaskContext.class);
		}
		public TaskContext task(int i) {
			return getRuleContext(TaskContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitDocument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitDocument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(84);
				wdlimport();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			workflow();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TASK) {
				{
				{
				setState(91);
				task();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WdlimportContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(WDLParser.IMPORT, 0); }
		public Import_locationContext import_location() {
			return getRuleContext(Import_locationContext.class,0);
		}
		public TerminalNode AS() { return getToken(WDLParser.AS, 0); }
		public Import_nameContext import_name() {
			return getRuleContext(Import_nameContext.class,0);
		}
		public WdlimportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wdlimport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterWdlimport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitWdlimport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitWdlimport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WdlimportContext wdlimport() throws RecognitionException {
		WdlimportContext _localctx = new WdlimportContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_wdlimport);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(IMPORT);
			setState(98);
			import_location();
			setState(101);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(99);
				match(AS);
				setState(100);
				import_name();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_locationContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(WDLParser.STRING, 0); }
		public Import_locationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_location; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterImport_location(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitImport_location(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitImport_location(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_locationContext import_location() throws RecognitionException {
		Import_locationContext _localctx = new Import_locationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_import_location);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(WDLParser.IDENTIFIER, 0); }
		public Import_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterImport_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitImport_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitImport_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_nameContext import_name() throws RecognitionException {
		Import_nameContext _localctx = new Import_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_import_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TaskContext extends ParserRuleContext {
		public TerminalNode TASK() { return getToken(WDLParser.TASK, 0); }
		public Task_nameContext task_name() {
			return getRuleContext(Task_nameContext.class,0);
		}
		public TerminalNode LEFT_BRACE() { return getToken(WDLParser.LEFT_BRACE, 0); }
		public TerminalNode RIGHT_BRACE() { return getToken(WDLParser.RIGHT_BRACE, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<Task_sectionContext> task_section() {
			return getRuleContexts(Task_sectionContext.class);
		}
		public Task_sectionContext task_section(int i) {
			return getRuleContext(Task_sectionContext.class,i);
		}
		public TaskContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_task; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterTask(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitTask(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitTask(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TaskContext task() throws RecognitionException {
		TaskContext _localctx = new TaskContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_task);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(TASK);
			setState(108);
			task_name();
			setState(109);
			match(LEFT_BRACE);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRING_TYPE) | (1L << FILE_TYPE) | (1L << INT_TYPE) | (1L << FLOAT_TYPE) | (1L << BOOL_TYPE) | (1L << OBJECT_TYPE) | (1L << MAP_TYPE) | (1L << ARRAY_TYPE))) != 0)) {
				{
				{
				setState(110);
				declaration();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RUNTIME) | (1L << OUTPUT) | (1L << COMMAND_BRACKET_BLOCK) | (1L << COMMAND_BRACE_BLOCK) | (1L << STRING))) != 0)) {
				{
				{
				setState(116);
				task_section();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(RIGHT_BRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Task_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(WDLParser.IDENTIFIER, 0); }
		public Task_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_task_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterTask_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitTask_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitTask_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Task_nameContext task_name() throws RecognitionException {
		Task_nameContext _localctx = new Task_nameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_task_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(WDLParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(WDLParser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			type();
			setState(127);
			match(IDENTIFIER);
			setState(130);
			_la = _input.LA(1);
			if (_la==EQUALS) {
				{
				setState(128);
				match(EQUALS);
				setState(129);
				expression(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Task_sectionContext extends ParserRuleContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public RuntimeContext runtime() {
			return getRuleContext(RuntimeContext.class,0);
		}
		public Task_outputContext task_output() {
			return getRuleContext(Task_outputContext.class,0);
		}
		public Parameter_metaContext parameter_meta() {
			return getRuleContext(Parameter_metaContext.class,0);
		}
		public MetaContext meta() {
			return getRuleContext(MetaContext.class,0);
		}
		public Task_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_task_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterTask_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitTask_section(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitTask_section(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Task_sectionContext task_section() throws RecognitionException {
		Task_sectionContext _localctx = new Task_sectionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_task_section);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132);
				command();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				runtime();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(134);
				task_output();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(135);
				parameter_meta();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(136);
				meta();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CommandContext extends ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
	 
		public CommandContext() { }
		public void copyFrom(CommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CommandBraceContext extends CommandContext {
		public TerminalNode COMMAND_BRACE_BLOCK() { return getToken(WDLParser.COMMAND_BRACE_BLOCK, 0); }
		public TerminalNode BRACE_BLOCK_CLOSE() { return getToken(WDLParser.BRACE_BLOCK_CLOSE, 0); }
		public TerminalNode BRACE_ANYTHING() { return getToken(WDLParser.BRACE_ANYTHING, 0); }
		public CommandBraceContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterCommandBrace(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitCommandBrace(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitCommandBrace(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CommandBracketContext extends CommandContext {
		public TerminalNode COMMAND_BRACKET_BLOCK() { return getToken(WDLParser.COMMAND_BRACKET_BLOCK, 0); }
		public TerminalNode BRACKET_BLOCK_CLOSE() { return getToken(WDLParser.BRACKET_BLOCK_CLOSE, 0); }
		public List<TerminalNode> BRACKET_ANYTHING() { return getTokens(WDLParser.BRACKET_ANYTHING); }
		public TerminalNode BRACKET_ANYTHING(int i) {
			return getToken(WDLParser.BRACKET_ANYTHING, i);
		}
		public List<TerminalNode> RIGHT_ARROW() { return getTokens(WDLParser.RIGHT_ARROW); }
		public TerminalNode RIGHT_ARROW(int i) {
			return getToken(WDLParser.RIGHT_ARROW, i);
		}
		public CommandBracketContext(CommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterCommandBracket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitCommandBracket(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitCommandBracket(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_command);
		int _la;
		try {
			setState(152);
			switch (_input.LA(1)) {
			case COMMAND_BRACE_BLOCK:
				_localctx = new CommandBraceContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				match(COMMAND_BRACE_BLOCK);
				setState(141);
				_la = _input.LA(1);
				if (_la==BRACE_ANYTHING) {
					{
					setState(140);
					match(BRACE_ANYTHING);
					}
				}

				setState(143);
				match(BRACE_BLOCK_CLOSE);
				}
				break;
			case COMMAND_BRACKET_BLOCK:
				_localctx = new CommandBracketContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				match(COMMAND_BRACKET_BLOCK);
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==BRACKET_ANYTHING || _la==RIGHT_ARROW) {
					{
					{
					setState(145);
					_la = _input.LA(1);
					if ( !(_la==BRACKET_ANYTHING || _la==RIGHT_ARROW) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(151);
				match(BRACKET_BLOCK_CLOSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_optionContext extends ParserRuleContext {
		public Var_option_keyContext var_option_key() {
			return getRuleContext(Var_option_keyContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(WDLParser.EQUALS, 0); }
		public Var_option_valueContext var_option_value() {
			return getRuleContext(Var_option_valueContext.class,0);
		}
		public Var_optionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_option; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).enterVar_option(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof WDLParserListener ) ((WDLParserListener)listener).exitVar_option(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof WDLParserVisitor ) return ((WDLParserVisitor<? extends T>)visitor).visitVar_option(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_optionContext var_option() throws RecognitionException {
		Var_optionContext _localctx = new Var_optionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_var_option);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			var_option_key();
			setState(155);
			match(EQUALS);
			setState(156);
			var_option_value();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
